setup payroll,add backup script, restore etc

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "jsonwebtoken": "^9.0.0",
         "node-device-detector": "^2.0.12",
         "pg": "^8.10.0",
+        "pg-promise": "^11.5.4",
         "simple-encryptor": "^4.0.0",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1",
