--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "pg": "^8.10.0",
         "pg-promise": "^11.5.4",
         "simple-encryptor": "^4.0.0",
+        "uuid": "^9.0.1",
         "winston": "^3.8.2",
         "winston-daily-rotate-file": "^4.7.1",
         "xss-clean": "^0.1.1"
